Create Account Successfully Test

--- a/serenity.properties
+++ b/serenity.properties
@@ -2,7 +2,7 @@ webdriver.driver=chrome
 webdriver.chrome.driver=src/test/resources/drivers/chromedriver1.exe
 webdriver.firefox.driver=src/test/resources/drivers/geckodriver.exe
 webdriver.ie.driver=src/test/resources/drivers/IEDriverServer.exe
-serenity.project.name = Proyecto Prueba
+serenity.project.name = Selenium Food App Test
 serenity.use.unique.browser = false
 serenity.dry.run=false
 chrome.switches=--start-maximized
