--- a/pom.xml
+++ b/pom.xml
@@ -124,33 +124,14 @@
 						<version>2.21.0</version>
 						<configuration>
 							<includes>
-								<include>**/Runner.java</include>
-
+									<include>**/CreateAccountSuccessfully.java</include>
+									<include>**/CreateFailAccount.java</include>
 							</includes>
 						</configuration>
 					</plugin>
 				</plugins>
 			</build>
 		</profile>
-		<profile>
-			<id>PRUEBA2</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.21.0</version>
-						<configuration>
-							<includes>
-								<include>**/Runner2.java</include>
-
-							</includes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
 	</profiles>
 	<!-- fin crea el perfil de ejecucion -->
 
@@ -169,7 +150,8 @@
 				<version>2.22.1</version>
 				<configuration>
 					<includes>
-						<include>**/Runner.java</include>
+						<include>**/CreateAccountSuccessfully.java</include>
+						<include>**/CreateFailAccount.java</include>
 					</includes>
 					<systemPropertyVariables>
 						<webdriver.base.url>${webdriver.base.url}</webdriver.base.url>
