--- a/serenity.properties
+++ b/serenity.properties
@@ -1,7 +1,8 @@
 webdriver.driver=chrome
 webdriver.chrome.driver=src/test/resources/drivers/chromedriver1.exe
-webdriver.firefox.driver=src/test/resources/drivers/geckodriver.exe
+webdriver.firefox.driver=/src/test/resources/drivers/geckodriver.exe
 webdriver.ie.driver=src/test/resources/drivers/IEDriverServer.exe
+webdriver.edge.driver=src/test/resources/drivers/msedgedriver.exe
 serenity.project.name = Selenium Food App Test
 serenity.use.unique.browser = false
 serenity.dry.run=false
