--- a/serenity.properties
+++ b/serenity.properties
@@ -1,4 +1,4 @@
-webdriver.driver=chrome
+webdriver.driver=edge
 webdriver.chrome.driver=src/test/resources/drivers/chromedriver.exe
 webdriver.firefox.driver=/src/test/resources/drivers/geckodriver.exe
 webdriver.ie.driver=src/test/resources/drivers/IEDriverServer.exe
